--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
 		
 		            <p>欢迎大家推荐自己在Android开发过程中用的好用的工具、学习开发教程、用到设计素材，欢迎Star、Fork
 		                <g-emoji alias="smile" fallback-src="https://assets-cdn.github.com/images/icons/emoji/unicode/1f604.png"></g-emoji>。</p>
-		            <p>如果你对翻译英文的Android开发技术文章感兴趣，欢迎Start和Fork<a href="https://github.com/AWCNTT/ArticleTranslateProject">AndroidWeekly中国文章翻译项目</a></p>
+		            <p>如果你对翻译英文的Android开发技术文章感兴趣，欢迎Star和Fork<a href="https://github.com/AWCNTT/ArticleTranslateProject">AndroidWeekly中国文章翻译项目</a></p>
 		            
             </blockquote>
             <blockquote>
