--- a/donate.html
+++ b/donate.html
@@ -235,7 +235,7 @@
 													</tr>
 													<tr>														
 														<td align="center"><a href="http://weibo.com/zhuzaifei" target="_blank">猪在飞_</a></td>
-														<td align="left">¥3.14+¥10.24</td>
+														<td align="left">¥3.14</td>
 														<td align="center">元方</td>
 														<td align="left">¥14.7</td>
 														<td align="center">王茂才</td>
@@ -510,6 +510,16 @@
 														<td align="left">¥10</td>
 														<td align="center">Hisos</td>
 														<td align="left">¥10</td>
+														<td align="center">蔚蓝幻想</td>
+														<td align="left">¥5</td>
+													</tr>
+													<tr>														
+														<td align="center"><a href="http://elggong.tumblr.com/">欣欣向荣</a></td>
+														<td align="left">¥10.24</td>
+														<td align="center">别叫我技术帝</td>
+														<td align="left">¥5</td>
+														<td align="center"></td>
+														<td align="left"></td>
 														<td align="center"></td>
 														<td align="left"></td>
 													</tr>
