--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
 									</tr>
 								<tr>
 								  <td >Windows</td>
-								  <td align="left"><a href="http://pan.baidu.com/s/1hquEqLQ">android-studio-ide-141.2314126-windows.zip</a></td>
+								  <td align="left"><a href="http://pan.baidu.com/s/1mg3tEnm">android-studio-ide-141.2314126-windows.zip</a></td>
 								  <td>361 MB</td>
 								  <td>0451f37afbedde5f902b32ca3fc1a6347ff2c399</td>
 								  <td rowspan="4"><a href="http://ww3.sinaimg.cn/large/8a41f469gw1ex285gx6hsj21ea0uctju.jpg">查看</a></td>
@@ -251,7 +251,7 @@
 								<tr>
 								  <td><nobr>Mac OS X</nobr></td>
 								  <td align="left">
-											<a href="http://pan.baidu.com/s/1ntCfdn7">android-studio-ide-141.2314126-mac.zip</a>
+											<a href="http://pan.baidu.com/s/1hquEqLQ">android-studio-ide-141.2314126-mac.zip</a>
 								  </td>
 								  <td>364 MB</td>
 								  <td>2c22b58ff6158cd90bbad54aefeb273f632df3c0</td>
@@ -260,7 +260,7 @@
 								<tr>
 								  <td>Linux</td>
 								  <td align="left">
-											<a href="http://pan.baidu.com/s/1mg3tEnm">android-studio-ide-141.2314126-linux.zip</a>
+											<a href="http://pan.baidu.com/s/1ntCfdn7">android-studio-ide-141.2314126-linux.zip</a>
 								  </td>
 								  <td>367 MB</td>
 								  <td>acdae82efe8e4c0b4f903764b50c7064d47c7910</td>
