Add donate info

--- a/donate.html
+++ b/donate.html
@@ -518,6 +518,16 @@
 														<td align="left">¥10.24</td>
 														<td align="center">别叫我技术帝</td>
 														<td align="left">¥5</td>
+														<td align="center">新锦</td>
+														<td align="left">¥16</td>
+														<td align="center">咙</td>
+														<td align="left">¥10</td>
+													</tr>
+													<tr>														
+														<td align="center">雕</a></td>
+														<td align="left">¥15</td>
+														<td align="center"></td>
+														<td align="left"></td>
 														<td align="center"></td>
 														<td align="left"></td>
 														<td align="center"></td>
