Add donate info

--- a/donate.html
+++ b/donate.html
@@ -526,8 +526,8 @@
 													<tr>														
 														<td align="center">雕</a></td>
 														<td align="left">¥15</td>
-														<td align="center"></td>
-														<td align="left"></td>
+														<td align="center">雪峰</td>
+														<td align="left">¥9.28</td>
 														<td align="center"></td>
 														<td align="left"></td>
 														<td align="center"></td>
