--- a/donate.html
+++ b/donate.html
@@ -528,8 +528,8 @@
 														<td align="left">¥15</td>
 														<td align="center">雪峰</td>
 														<td align="left">¥9.28</td>
-														<td align="center"></td>
-														<td align="left"></td>
+														<td align="center">Small Mr.Cao</td>
+														<td align="left">¥6.66</td>
 														<td align="center"></td>
 														<td align="left"></td>
 													</tr>
