Delete ADT Bundle and ADT Plugin link

--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
 							          <li role="presentation"><a role="menuitem" tabindex="3" href="#sdk-list">SDK</a></li>
 							          <li role="presentation"><a role="menuitem" tabindex="-1" href="#ndk">NDK</a></li>
 							          <li role="presentation"><a role="menuitem" tabindex="-1" href="#jdk">JDK</a></li>
-							          <li role="presentation"><a role="menuitem" tabindex="-1" href="#adt-bundle">ADT Bundle</a></li>
-							          <li role="presentation"><a role="menuitem" tabindex="1" href="#adt-plugin">ADT Plugin</a></li>  
+												<!-- <li role="presentation"><a role="menuitem" tabindex="-1" href="#adt-bundle">ADT Bundle</a></li> -->
+							          <!-- <li role="presentation"><a role="menuitem" tabindex="1" href="#adt-plugin">ADT Plugin</a></li> -->  
 							          <li role="presentation"><a role="menuitem" tabindex="4" href="#sdk-system-images">SDK System images</a></li>
 							          <li role="presentation"><a role="menuitem" tabindex="-1" href="#googlemap-apis-sdk">GoogleMap APIs SDK</a></li>
 							          <li role="presentation"><a role="menuitem" tabindex="-1" href="#google-glass-sdk">Google Glass SDK</a></li>
@@ -163,14 +163,8 @@
 		                <strong>Android Dev Tools官网地址：<a href="http://www.androiddevtools.cn">www.androiddevtools.cn</a></strong>
 		            </p>
 		
-		            <p>收集整理Android开发所需的Android SDK、开发中用到的工具、Android开发教程、Android设计规范，免费的设计素材等。</p>
-		
-		            <p>欢迎大家推荐自己在Android开发过程中用的好用的工具、学习开发教程、用到设计素材，欢迎Star、Fork
-		                <g-emoji alias="smile" fallback-src="https://assets-cdn.github.com/images/icons/emoji/unicode/1f604.png"></g-emoji>。</p>
-		            <p>如果你对翻译英文的Android开发技术文章感兴趣，欢迎Star和Fork<a href="https://github.com/AWCNTT/ArticleTranslateProject">AndroidWeekly中国文章翻译项目</a></p>
-		            
-            </blockquote>
-            <blockquote>
+		            <p>收集整理Android开发所需的Android SDK、开发中用到的工具、Android开发教程、Android设计规范，免费的设计素材等。欢迎大家推荐自己在Android开发过程中用的好用的工具、学习开发教程、用到设计素材。</p>
+		            <br/>
 								<p>如果你觉得本站对你有用，你可以点击底部的分享按钮，把本站分享到社交网络让你的小伙伴和更多的人知道，<br>或者可以考虑对本站
 										<a href="./donate.html"><strong>捐赠</strong></a>支持下，支持我把本站做的更好，帮助更多的人。目前支持支付宝和微信，金额随意。
 								</p>
@@ -1708,6 +1702,7 @@
                     </tr>
                 </tbody>
             </table>
+						<!--
 						<h4 id="adt-bundle">
                 <a name="adt-bundle" class="anchor" href="#adt-bundle">
                     <span class="octicon octicon-link"></span>
@@ -1749,8 +1744,8 @@
                     </tr>
                 </tbody>
             </table>
-            
-            <h4 id="adt-plugin">
+
+						<h4 id="adt-plugin">
                 <a name="adt-plugin" class="anchor" href="#adt-plugin">
                     <span class="octicon octicon-link"></span>
                 </a>ADT Plugin</h4>
@@ -1798,6 +1793,7 @@
                     </tr>
                 </tbody>
             </table>
+						-->
 
             <h4 id="gradle">
                 <a name="gradle" class="anchor" href="#gradle">
