--- a/index.html
+++ b/index.html
@@ -1808,6 +1808,18 @@
                 </thead>
                 <tbody>
                 	<tr>
+                        <td align="left"><a href="http://pan.baidu.com/s/1qW25Ndy">gradle-2.8-all.zip</a></td>
+                  </tr>
+                	<tr>
+                        <td align="left"><a href="http://pan.baidu.com/s/1c0g9D5m">gradle-2.7-all.zip</a></td>
+                  </tr>
+                	<tr>
+                        <td align="left"><a href="http://pan.baidu.com/s/1mg8JAbA">gradle-2.6-all.zip</a></td>
+                  </tr>
+                	<tr>
+                        <td align="left"><a href="http://pan.baidu.com/s/1jGrmKx4">gradle-2.5-all.zip</a></td>
+                  </tr>
+                	<tr>
                         <td align="left"><a href="http://pan.baidu.com/s/1c0dcgfe">gradle-2.4-all.zip</a></td>
                   </tr>
                 	<tr>
