--- a/donate.html
+++ b/donate.html
@@ -530,8 +530,8 @@
 														<td align="left">¥9.28</td>
 														<td align="center">Small Mr.Cao</td>
 														<td align="left">¥6.66</td>
-														<td align="center"></td>
-														<td align="left"></td>
+														<td align="center">然</td>
+														<td align="left">¥1</td>
 													</tr>
 											</tbody>
 									</table>
