Add donate info

--- a/donate.html
+++ b/donate.html
@@ -533,6 +533,16 @@
 														<td align="center">然</td>
 														<td align="left">¥1</td>
 													</tr>
+													<tr>														
+														<td align="center">黄鹏</a></td>
+														<td align="left">¥1.5</td>
+														<td align="center">kasterlar</td>
+														<td align="left">¥5</td>
+														<td align="center"></td>
+														<td align="left"></td>
+														<td align="center"></td>
+														<td align="left"></td>
+													</tr>
 											</tbody>
 									</table>
 		            </div>
