Add donate info

--- a/donate.html
+++ b/donate.html
@@ -538,8 +538,8 @@
 														<td align="left">¥1.5</td>
 														<td align="center">kasterlar</td>
 														<td align="left">¥5</td>
-														<td align="center"></td>
-														<td align="left"></td>
+														<td align="center">柴传发</td>
+														<td align="left">¥1</td>
 														<td align="center"></td>
 														<td align="left"></td>
 													</tr>
