Add donate info

--- a/donate.html
+++ b/donate.html
@@ -540,8 +540,8 @@
 														<td align="left">¥5</td>
 														<td align="center">柴传发</td>
 														<td align="left">¥1</td>
-														<td align="center"></td>
-														<td align="left"></td>
+														<td align="center">马云是谁啊</td>
+														<td align="left">¥2</td>
 													</tr>
 											</tbody>
 									</table>
