Add donate info

--- a/donate.html
+++ b/donate.html
@@ -550,8 +550,8 @@
 														<td align="left">¥6.6</td>
 														<td align="center"><a href="http://blog.csdn.net/aishang5wpj">某只路人</a></td>
 														<td align="left">¥10.24</td>
-														<td align="center"></td>
-														<td align="left"></td>
+														<td align="center">李江</td>
+														<td align="left">¥1</td>
 													</tr>
 											</tbody>
 									</table>
