Add donate info

--- a/donate.html
+++ b/donate.html
@@ -544,7 +544,7 @@
 														<td align="left">¥2</td>
 													</tr>
 													<tr>														
-														<td align="center">羞射的小内裤</a></td>
+														<td align="center">羞射的小内裤</td>
 														<td align="left">¥1</td>
 														<td align="center">曹草</td>
 														<td align="left">¥6.6</td>
@@ -552,6 +552,16 @@
 														<td align="left">¥10.24</td>
 														<td align="center">李江</td>
 														<td align="left">¥1</td>
+													</tr>
+													<tr>														
+														<td align="center">风忠沐曦</td>
+														<td align="left">¥10.24</td>
+														<td align="center"></td>
+														<td align="left"></td>
+														<td align="center"></td>
+														<td align="left"></td>
+														<td align="center"></td>
+														<td align="left"></td>
 													</tr>
 											</tbody>
 									</table>
