Add donate info

--- a/donate.html
+++ b/donate.html
@@ -556,8 +556,8 @@
 													<tr>														
 														<td align="center">风忠沐曦</td>
 														<td align="left">¥10.24</td>
-														<td align="center"></td>
-														<td align="left"></td>
+														<td align="center">剑</td>
+														<td align="left">¥10.24</td>
 														<td align="center"></td>
 														<td align="left"></td>
 														<td align="center"></td>
