Add donate info

--- a/donate.html
+++ b/donate.html
@@ -558,8 +558,8 @@
 														<td align="left">¥10.24</td>
 														<td align="center">剑</td>
 														<td align="left">¥10.24</td>
-														<td align="center"></td>
-														<td align="left"></td>
+														<td align="center">王攀峰</td>
+														<td align="left">¥50</td>
 														<td align="center"></td>
 														<td align="left"></td>
 													</tr>
