Add donate info

--- a/donate.html
+++ b/donate.html
@@ -560,8 +560,8 @@
 														<td align="left">¥10.24</td>
 														<td align="center">王攀峰</td>
 														<td align="left">¥50</td>
-														<td align="center"></td>
-														<td align="left"></td>
+														<td align="center">Henrietta</td>
+														<td align="left">¥5</td>
 													</tr>
 											</tbody>
 									</table>
