Add donate info

--- a/donate.html
+++ b/donate.html
@@ -563,6 +563,16 @@
 														<td align="center">Henrietta</td>
 														<td align="left">¥5</td>
 													</tr>
+													<tr>														
+														<td align="center">~_~会笑的眼睛</td>
+														<td align="left">¥5</td>
+														<td align="center"></td>
+														<td align="left"></td>
+														<td align="center"></td>
+														<td align="left"></td>
+														<td align="center"></td>
+														<td align="left"></td>
+													</tr>
 											</tbody>
 									</table>
 		            </div>
