Add donate info

--- a/donate.html
+++ b/donate.html
@@ -566,10 +566,10 @@
 													<tr>														
 														<td align="center">~_~会笑的眼睛</td>
 														<td align="left">¥5</td>
-														<td align="center"></td>
-														<td align="left"></td>
-														<td align="center"></td>
-														<td align="left"></td>
+														<td align="center">佳昊</td>
+														<td align="left">¥10</td>
+														<td align="center">包弗拉门哥</td>
+														<td align="left">¥4</td>
 														<td align="center"></td>
 														<td align="left"></td>
 													</tr>
