Add donate info

--- a/donate.html
+++ b/donate.html
@@ -570,6 +570,16 @@
 														<td align="left">¥10</td>
 														<td align="center">包弗拉门哥</td>
 														<td align="left">¥4</td>
+														<td align="center">liuhengspace</td>
+														<td align="left">¥8</td>
+													</tr>
+													<tr>														
+														<td align="center">carter</td>
+														<td align="left">¥1</td>
+														<td align="center"></td>
+														<td align="left"></td>
+														<td align="center"></td>
+														<td align="left"></td>
 														<td align="center"></td>
 														<td align="left"></td>
 													</tr>
