Add donate info

--- a/donate.html
+++ b/donate.html
@@ -576,8 +576,8 @@
 													<tr>														
 														<td align="center">carter</td>
 														<td align="left">¥1</td>
-														<td align="center"></td>
-														<td align="left"></td>
+														<td align="center">队长</td>
+														<td align="left">¥10.24</td>
 														<td align="center"></td>
 														<td align="left"></td>
 														<td align="center"></td>
