Add donate info

--- a/donate.html
+++ b/donate.html
@@ -578,8 +578,8 @@
 														<td align="left">¥1</td>
 														<td align="center">队长</td>
 														<td align="left">¥10.24</td>
-														<td align="center"></td>
-														<td align="left"></td>
+														<td align="center">磊</td>
+														<td align="left">¥2</td>
 														<td align="center"></td>
 														<td align="left"></td>
 													</tr>
