Add donate info

--- a/donate.html
+++ b/donate.html
@@ -580,8 +580,8 @@
 														<td align="left">¥10.24</td>
 														<td align="center">磊</td>
 														<td align="left">¥2</td>
-														<td align="center"></td>
-														<td align="left"></td>
+														<td align="center">wyx</td>
+														<td align="left">¥8.88</td>
 													</tr>
 											</tbody>
 									</table>
