Add donate info

--- a/donate.html
+++ b/donate.html
@@ -583,6 +583,16 @@
 														<td align="center">wyx</td>
 														<td align="left">¥8.88</td>
 													</tr>
+													<tr>														
+														<td align="center">hotzhi</td>
+														<td align="left">¥5</td>
+														<td align="center"></td>
+														<td align="left"></td>
+														<td align="center"></td>
+														<td align="left"></td>
+														<td align="center"></td>
+														<td align="left"></td>
+													</tr>
 											</tbody>
 									</table>
 		            </div>
