Add donate info

--- a/donate.html
+++ b/donate.html
@@ -586,8 +586,8 @@
 													<tr>														
 														<td align="center">hotzhi</td>
 														<td align="left">¥5</td>
-														<td align="center"></td>
-														<td align="left"></td>
+														<td align="center">伟添</td>
+														<td align="left">¥5</td>
 														<td align="center"></td>
 														<td align="left"></td>
 														<td align="center"></td>
