Add donate info

--- a/donate.html
+++ b/donate.html
@@ -588,8 +588,8 @@
 														<td align="left">¥5</td>
 														<td align="center">伟添</td>
 														<td align="left">¥5</td>
-														<td align="center"></td>
-														<td align="left"></td>
+														<td align="center">夜夜笙歌</td>
+														<td align="left">¥10.24</td>
 														<td align="center"></td>
 														<td align="left"></td>
 													</tr>
