Add donate info

--- a/donate.html
+++ b/donate.html
@@ -593,6 +593,16 @@
 														<td align="center">Nate_Robinson</td>
 														<td align="left">¥5</td>
 													</tr>
+													<tr>														
+														<td align="center">小民</td>
+														<td align="left">¥10</td>
+														<td align="center"></td>
+														<td align="left"></td>
+														<td align="center"></td>
+														<td align="left"></td>
+														<td align="center"></td>
+														<td align="left"></td>
+													</tr>
 											</tbody>
 									</table>
 		            </div>
