Add donate info

--- a/donate.html
+++ b/donate.html
@@ -596,8 +596,8 @@
 													<tr>														
 														<td align="center">小民</td>
 														<td align="left">¥10</td>
-														<td align="center"></td>
-														<td align="left"></td>
+														<td align="center">huozi</td>
+														<td align="left"><a href="https://github.com/houziershi"></a></td>
 														<td align="center"></td>
 														<td align="left"></td>
 														<td align="center"></td>
