--- a/donate.html
+++ b/donate.html
@@ -598,8 +598,8 @@
 														<td align="left">¥10</td>
 														<td align="center"><a href="https://github.com/houziershi">huozi</a></td>
 														<td align="left">¥5</td>
-														<td align="center"></td>
-														<td align="left"></td>
+														<td align="center">superK</td>
+														<td align="left">¥10</td>
 														<td align="center"></td>
 														<td align="left"></td>
 													</tr>
