Add donate info

--- a/donate.html
+++ b/donate.html
@@ -600,8 +600,8 @@
 														<td align="left">¥5</td>
 														<td align="center">superK</td>
 														<td align="left">¥10</td>
-														<td align="center"></td>
-														<td align="left"></td>
+														<td align="center">川</td>
+														<td align="left">¥10.24</td>
 													</tr>
 											</tbody>
 									</table>
