--- a/donate.html
+++ b/donate.html
@@ -603,6 +603,16 @@
 														<td align="center">川</td>
 														<td align="left">¥10.24</td>
 													</tr>
+													<tr>														
+														<td align="center">祖拯</td>
+														<td align="left">¥2</td>
+														<td align="center"></td>
+														<td align="left"></td>
+														<td align="center"></td>
+														<td align="left"></td>
+														<td align="center"></td>
+														<td align="left"></td>
+													</tr>
 											</tbody>
 									</table>
 		            </div>
