Add donate info

--- a/donate.html
+++ b/donate.html
@@ -606,10 +606,10 @@
 													<tr>														
 														<td align="center">祖拯</td>
 														<td align="left">¥2</td>
-														<td align="center"></td>
-														<td align="left"></td>
-														<td align="center"></td>
-														<td align="left"></td>
+														<td align="center">秀伟</td>
+														<td align="left">¥6.6</td>
+														<td align="center">sherlock</td>
+														<td align="left">¥15</td>
 														<td align="center"></td>
 														<td align="left"></td>
 													</tr>
