Add donate info

--- a/donate.html
+++ b/donate.html
@@ -610,8 +610,8 @@
 														<td align="left">¥6.6</td>
 														<td align="center">sherlock</td>
 														<td align="left">¥15</td>
-														<td align="center"></td>
-														<td align="left"></td>
+														<td align="center">付江</td>
+														<td align="left">¥10</td>
 													</tr>
 											</tbody>
 									</table>
