Add donate info

--- a/donate.html
+++ b/donate.html
@@ -613,6 +613,16 @@
 														<td align="center">付江</td>
 														<td align="left">¥10</td>
 													</tr>
+													<tr>														
+														<td align="center">huenprotoss</td>
+														<td align="left">¥5</td>
+														<td align="center"></td>
+														<td align="left"></td>
+														<td align="center"></td>
+														<td align="left"></td>
+														<td align="center"></td>
+														<td align="left"></td>
+													</tr>
 											</tbody>
 									</table>
 		            </div>
