--- a/donate.html
+++ b/donate.html
@@ -616,8 +616,8 @@
 													<tr>														
 														<td align="center">huenprotoss</td>
 														<td align="left">¥5</td>
-														<td align="center"></td>
-														<td align="left"></td>
+														<td align="center">ming</td>
+														<td align="left">¥5</td>
 														<td align="center"></td>
 														<td align="left"></td>
 														<td align="center"></td>
