Add donate info

--- a/donate.html
+++ b/donate.html
@@ -618,8 +618,8 @@
 														<td align="left">¥5</td>
 														<td align="center">ming</td>
 														<td align="left">¥5</td>
-														<td align="center"></td>
-														<td align="left"></td>
+														<td align="center">嘉伟</td>
+														<td align="left">¥10.24</td>
 														<td align="center"></td>
 														<td align="left"></td>
 													</tr>
