--- a/donate.html
+++ b/donate.html
@@ -620,8 +620,8 @@
 														<td align="left">¥5</td>
 														<td align="center">嘉伟</td>
 														<td align="left">¥10.24</td>
-														<td align="center"></td>
-														<td align="left"></td>
+														<td align="center">Caesar</td>
+														<td align="left">¥10</td>
 													</tr>
 											</tbody>
 									</table>
