Add donate info

--- a/donate.html
+++ b/donate.html
@@ -628,10 +628,10 @@
 														<td align="left">¥6</td>
 														<td align="center">魑魅魍魉鬽魆魊</td>
 														<td align="left">¥25.6</td>
-														<td align="center"></td>
-														<td align="left"></td>
-														<td align="center"></td>
-														<td align="left"></td>
+														<td align="center">柴柴</td>
+														<td align="left">¥20.48</td>
+														<td align="center">小西</td>
+														<td align="left">¥10</td>
 													</tr>
 											</tbody>
 									</table>
