--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>AndroidDevTools-Android SDK Android Studio下载</title>
+    <title>AndroidDevTools Android SDK下载 Android Studio下载 Gradle下载 SDK Tools下载</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="无需翻墙下载最新版Android开发工具 ADT Bundle Android Studio SDK Tools">
+    <meta name="description" content="无需翻墙下载最新版Android开发工具 ADT Bundle Android Studio Android SDK SDK Tools Gradle Android SDK下载 android sdk下载 Android Studio下载 android studio下载 Gradle下载  gradle下载 SDK Tools下载 sDK tools下载">
     <meta name="ujianVerification" content="ee5a6c5854f1826b3123039d726496c9" />
     <link href="static/css/bootstrap-combined.min.css" rel="stylesheet">
     <link href="static/css/app.css" rel="stylesheet">
