--- a/donate.html
+++ b/donate.html
@@ -633,6 +633,16 @@
 														<td align="center">小西</td>
 														<td align="left">¥10</td>
 													</tr>
+													<tr>														
+														<td align="center">草帽稻草人</td>
+														<td align="left">¥10.24</td>
+														<td align="center"></td>
+														<td align="left"></td>
+														<td align="center"</td>
+														<td align="left"></td>
+														<td align="center"></td>
+														<td align="left"></td>
+													</tr>
 											</tbody>
 									</table>
 		            </div>
