Add donate info

--- a/donate.html
+++ b/donate.html
@@ -636,8 +636,8 @@
 													<tr>														
 														<td align="center">草帽稻草人</td>
 														<td align="left">¥10.24</td>
-														<td align="center"></td>
-														<td align="left"></td>
+														<td align="center">王哲轩</td>
+														<td align="left">¥2.22</td>
 														<td align="center"</td>
 														<td align="left"></td>
 														<td align="center"></td>
