--- a/donate.html
+++ b/donate.html
@@ -638,8 +638,8 @@
 														<td align="left">¥10.24</td>
 														<td align="center">王哲轩</td>
 														<td align="left">¥2.22</td>
-														<td align="center"</td>
-														<td align="left"></td>
+														<td align="center">航斌</td>
+														<td align="left">¥10</td>
 														<td align="center"></td>
 														<td align="left"></td>
 													</tr>
