--- a/donate.html
+++ b/donate.html
@@ -640,8 +640,8 @@
 														<td align="left">¥2.22</td>
 														<td align="center">航斌</td>
 														<td align="left">¥10</td>
-														<td align="center"></td>
-														<td align="left"></td>
+														<td align="center">徐长友</td>
+														<td align="left">¥4.11</td>
 													</tr>
 											</tbody>
 									</table>
