Add donate info

--- a/donate.html
+++ b/donate.html
@@ -643,6 +643,16 @@
 														<td align="center">徐长友</td>
 														<td align="left">¥4.11</td>
 													</tr>
+													<tr>														
+														<td align="center">gewasi</td>
+														<td align="left">¥7.7</td>
+														<td align="center"></td>
+														<td align="left"></td>
+														<td align="center"></td>
+														<td align="left"></td>
+														<td align="center"></td>
+														<td align="left"></td>
+													</tr>
 											</tbody>
 									</table>
 		            </div>
