--- a/donate.html
+++ b/donate.html
@@ -646,6 +646,16 @@
 													<tr>														
 														<td align="center">gewasi</td>
 														<td align="left">¥7.7</td>
+														<td align="center">吴祖玉</td>
+														<td align="left">¥5</td>
+														<td align="center">刘忠杨</td>
+														<td align="left">¥5</td>
+														<td align="center">我爱中国</td>
+														<td align="left">¥10.24</td>
+													</tr>
+													<tr>														
+														<td align="center">另一章翻开</td>
+														<td align="left">¥10</td>
 														<td align="center"></td>
 														<td align="left"></td>
 														<td align="center"></td>
