--- a/donate.html
+++ b/donate.html
@@ -656,8 +656,8 @@
 													<tr>														
 														<td align="center">另一章翻开</td>
 														<td align="left">¥10</td>
-														<td align="center"></td>
-														<td align="left"></td>
+														<td align="center">Narcissus</td>
+														<td align="left">¥10.24</td>
 														<td align="center"></td>
 														<td align="left"></td>
 														<td align="center"></td>
