Add donate info

--- a/donate.html
+++ b/donate.html
@@ -658,8 +658,8 @@
 														<td align="left">¥10</td>
 														<td align="center">Narcissus</td>
 														<td align="left">¥10.24</td>
-														<td align="center"></td>
-														<td align="left"></td>
+														<td align="center">小田鼠</td>
+														<td align="left">¥10.24</td>
 														<td align="center"></td>
 														<td align="left"></td>
 													</tr>
