Add donate info

--- a/donate.html
+++ b/donate.html
@@ -680,8 +680,8 @@
 														<td align="left">¥10</td>
 														<td align="center">杨小木</td>
 														<td align="left">¥1</td>
-														<td align="center"></td>
-														<td align="left"></td>
+														<td align="center">寡人这么年轻</td>
+														<td align="left">¥10</td>
 													</tr>
 											</tbody>
 									</table>
