Add donate info

--- a/donate.html
+++ b/donate.html
@@ -683,6 +683,16 @@
 														<td align="center">寡人这么年轻</td>
 														<td align="left">¥10</td>
 													</tr>
+													<tr>														
+														<td align="center">guiyun</td>
+														<td align="left">¥10</td>
+														<td align="center"></td>
+														<td align="left"></td>
+														<td align="center"></td>
+														<td align="left"></td>
+														<td align="center"></td>
+														<td align="left"></td>
+													</tr>
 											</tbody>
 									</table>
 		            </div>
