--- a/donate.html
+++ b/donate.html
@@ -686,8 +686,8 @@
 													<tr>														
 														<td align="center">guiyun</td>
 														<td align="left">¥10</td>
-														<td align="center"></td>
-														<td align="left"></td>
+														<td align="center">L—fushen</td>
+														<td align="left">¥1</td>
 														<td align="center"></td>
 														<td align="left"></td>
 														<td align="center"></td>
