Add donate info

--- a/donate.html
+++ b/donate.html
@@ -688,8 +688,8 @@
 														<td align="left">¥10</td>
 														<td align="center">L—fushen</td>
 														<td align="left">¥1</td>
-														<td align="center"></td>
-														<td align="left"></td>
+														<td align="center">Simon</td>
+														<td align="left">¥8</td>
 														<td align="center"></td>
 														<td align="left"></td>
 													</tr>
