Add donate info

--- a/donate.html
+++ b/donate.html
@@ -690,8 +690,8 @@
 														<td align="left">¥1</td>
 														<td align="center">Simon</td>
 														<td align="left">¥8</td>
-														<td align="center"></td>
-														<td align="left"></td>
+														<td align="center">乔兵</td>
+														<td align="left">¥1</td>
 													</tr>
 											</tbody>
 									</table>
