--- a/donate.html
+++ b/donate.html
@@ -693,6 +693,16 @@
 														<td align="center">乔兵</td>
 														<td align="left">¥1</td>
 													</tr>
+													<tr>														
+														<td align="center">志鹏</td>
+														<td align="left">¥1</td>
+														<td align="center"></td>
+														<td align="left"></td>
+														<td align="center"></td>
+														<td align="left"></td>
+														<td align="center"></td>
+														<td align="left"></td>
+													</tr>
 											</tbody>
 									</table>
 		            </div>
