--- a/donate.html
+++ b/donate.html
@@ -696,10 +696,10 @@
 													<tr>														
 														<td align="center">志鹏</td>
 														<td align="left">¥1</td>
-														<td align="center"></td>
-														<td align="left"></td>
-														<td align="center"></td>
-														<td align="left"></td>
+														<td align="center">江星</td>
+														<td align="left">¥1</td>
+														<td align="center">George</td>
+														<td align="left">¥0.1</td>
 														<td align="center"></td>
 														<td align="left"></td>
 													</tr>
