Add donate info

--- a/donate.html
+++ b/donate.html
@@ -700,6 +700,16 @@
 														<td align="left">¥1</td>
 														<td align="center">George</td>
 														<td align="left">¥0.1</td>
+														<td align="center">小冬</td>
+														<td align="left">¥0.01</td>
+													</tr>
+													<tr>														
+														<td align="center">simon</td>
+														<td align="left">¥10</td>
+														<td align="center">长大就胖了</td>
+														<td align="left">¥5</td>
+														<td align="center"></td>
+														<td align="left"></td>
 														<td align="center"></td>
 														<td align="left"></td>
 													</tr>
