--- a/donate.html
+++ b/donate.html
@@ -708,8 +708,8 @@
 														<td align="left">¥10</td>
 														<td align="center">长大就胖了</td>
 														<td align="left">¥5</td>
-														<td align="center"></td>
-														<td align="left"></td>
+														<td align="center">暗夜精灵</td>
+														<td align="left">¥5</td>
 														<td align="center"></td>
 														<td align="left"></td>
 													</tr>
