--- a/donate.html
+++ b/donate.html
@@ -710,6 +710,16 @@
 														<td align="left">¥5</td>
 														<td align="center">暗夜精灵</td>
 														<td align="left">¥5</td>
+														<td align="center">柔</td>
+														<td align="left">¥3.6</td>
+													</tr>
+													<tr>														
+														<td align="center">_嗼小c</td>
+														<td align="left">¥1</td>
+														<td align="center"></td>
+														<td align="left"></td>
+														<td align="center"></td>
+														<td align="left"></td>
 														<td align="center"></td>
 														<td align="left"></td>
 													</tr>
