Add donate info

--- a/donate.html
+++ b/donate.html
@@ -716,8 +716,8 @@
 													<tr>														
 														<td align="center">_嗼小c</td>
 														<td align="left">¥1</td>
-														<td align="center"></td>
-														<td align="left"></td>
+														<td align="center">远钦</td>
+														<td align="left">¥8.88</td>
 														<td align="center"></td>
 														<td align="left"></td>
 														<td align="center"></td>
