Add donate info

--- a/donate.html
+++ b/donate.html
@@ -718,7 +718,7 @@
 														<td align="left">¥1</td>
 														<td align="center">远钦</td>
 														<td align="left">¥8.88</td>
-														<td align="center">徐风向</td>
+														<td align="center">徐风</td>
 														<td align="left">¥1</td>
 														<td align="center">定甲</td>
 														<td align="left">¥10.24</td>
