Add donate info

--- a/donate.html
+++ b/donate.html
@@ -733,6 +733,16 @@
 														<td align="center">好好笑</td>
 														<td align="left">¥8.88</td>
 													</tr>
+													<tr>														
+														<td align="center">laisse</td>
+														<td align="left">¥10</td>
+														<td align="center"></td>
+														<td align="left"></td>
+														<td align="center"></td>
+														<td align="left"></td>
+														<td align="center"></td>
+														<td align="left"></td>
+													</tr>
 											</tbody>
 									</table>
 		            </div>
