Add donate info

--- a/donate.html
+++ b/donate.html
@@ -736,8 +736,8 @@
 													<tr>														
 														<td align="center">laisse</td>
 														<td align="left">¥10</td>
-														<td align="center"></td>
-														<td align="left"></td>
+														<td align="center">左文</td>
+														<td align="left">¥5</td>
 														<td align="center"></td>
 														<td align="left"></td>
 														<td align="center"></td>
