Add donate info

--- a/donate.html
+++ b/donate.html
@@ -738,6 +738,16 @@
 														<td align="left">¥10</td>
 														<td align="center">左文</td>
 														<td align="left">¥5</td>
+														<td align="center">福田</td>
+														<td align="left">¥2</td>
+														<td align="center">难得糊涂</td>
+														<td align="left">¥1</td>
+													</tr>
+													<tr>														
+														<td align="center">旅途</td>
+														<td align="left">¥8.88</td>
+														<td align="center"></td>
+														<td align="left"></td>
 														<td align="center"></td>
 														<td align="left"></td>
 														<td align="center"></td>
