Add donate info

--- a/donate.html
+++ b/donate.html
@@ -746,8 +746,8 @@
 													<tr>														
 														<td align="center">旅途</td>
 														<td align="left">¥8.88</td>
-														<td align="center"></td>
-														<td align="left"></td>
+														<td align="center">昌简</td>
+														<td align="left">¥11.11</td>
 														<td align="center"></td>
 														<td align="left"></td>
 														<td align="center"></td>
