Add donate info

--- a/donate.html
+++ b/donate.html
@@ -750,8 +750,8 @@
 														<td align="left">¥11.11</td>
 														<td align="center">杨建航</td>
 														<td align="left">¥28</td>
-														<td align="center"></td>
-														<td align="left"></td>
+														<td align="center">胡</td>
+														<td align="left">¥1</td>
 													</tr>
 											</tbody>
 									</table>
