Add donate info

--- a/donate.html
+++ b/donate.html
@@ -744,14 +744,14 @@
 														<td align="left">¥1</td>
 													</tr>
 													<tr>														
-														<td align="center">旅途</td>
-														<td align="left">¥8.88</td>
-														<td align="center">昌简</td>
-														<td align="left">¥11.11</td>
-														<td align="center">杨建航</td>
-														<td align="left">¥28</td>
-														<td align="center">胡</td>
+														<td align="center">==</td>
 														<td align="left">¥1</td>
+														<td align="center">迦蓝之翼</td>
+														<td align="left">¥1</td>
+														<td align="center"></td>
+														<td align="left"></td>
+														<td align="center"></td>
+														<td align="left"></td>
 													</tr>
 											</tbody>
 									</table>
