Add donate info

--- a/donate.html
+++ b/donate.html
@@ -760,6 +760,16 @@
 														<td align="left">¥1</td>														
 														<td align="center">汉将</td>
 														<td align="left">¥5</td>
+														<td align="center">ZYP</td>
+														<td align="left">¥5.11</td>
+													</tr>
+													<tr>
+														<td align="center">大鹏</td>
+														<td align="left">¥10.24</td>
+														<td align="center"></td>
+														<td align="left"></td>														
+														<td align="center"></td>
+														<td align="left"></td>
 														<td align="center"></td>
 														<td align="left"></td>
 													</tr>
