--- a/donate.html
+++ b/donate.html
@@ -766,8 +766,8 @@
 													<tr>
 														<td align="center">大鹏</td>
 														<td align="left">¥10.24</td>
-														<td align="center"></td>
-														<td align="left"></td>														
+														<td align="center">梦小娴</td>
+														<td align="left">¥10</td>														
 														<td align="center"></td>
 														<td align="left"></td>
 														<td align="center"></td>
