Add donate info

--- a/donate.html
+++ b/donate.html
@@ -768,10 +768,10 @@
 														<td align="left">¥10.24</td>
 														<td align="center">梦小娴</td>
 														<td align="left">¥10</td>														
-														<td align="center"></td>
-														<td align="left"></td>
-														<td align="center"></td>
-														<td align="left"></td>
+														<td align="center">nowy</td>
+														<td align="left">¥10.24</td>
+														<td align="center">寒平洛一</td>
+														<td align="left">¥1</td>
 													</tr>
 											</tbody>
 									</table>
