Add donate info

--- a/donate.html
+++ b/donate.html
@@ -773,6 +773,16 @@
 														<td align="center">寒平洛一</td>
 														<td align="left">¥1</td>
 													</tr>
+													<tr>
+														<td align="center">Ox小生</td>
+														<td align="left">¥1</td>
+														<td align="center"></td>
+														<td align="left"></td>														
+														<td align="center"></td>
+														<td align="left"></td>
+														<td align="center"></td>
+														<td align="left"></td>
+													</tr>
 											</tbody>
 									</table>
 		            </div>
