Add donate info

--- a/donate.html
+++ b/donate.html
@@ -776,8 +776,8 @@
 													<tr>
 														<td align="center">Ox小生</td>
 														<td align="left">¥1</td>
-														<td align="center"></td>
-														<td align="left"></td>														
+														<td align="center">蟹小扬</td>
+														<td align="left">¥12.12</td>														
 														<td align="center"></td>
 														<td align="left"></td>
 														<td align="center"></td>
